// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering bars Can render two bars within domain 1`] = `
[
  {
    "color": "red",
    "displayValue": undefined,
    "height": 100,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "seriesStyle": {
      "displayValue": {
        "alignment": {
          "horizontal": "center",
          "vertical": "middle",
        },
        "fill": {
          "textBorder": 0,
        },
        "fontFamily": "Inter, BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "fontSize": 10,
        "fontStyle": "normal",
        "offsetX": 0,
        "offsetY": 0,
        "padding": 0,
      },
      "rect": {
        "opacity": 1,
      },
      "rectBorder": {
        "strokeWidth": 1,
        "visible": false,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "width": 50,
    "x": 0,
    "y": 0,
  },
  {
    "color": "red",
    "displayValue": undefined,
    "height": 50,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "seriesStyle": {
      "displayValue": {
        "alignment": {
          "horizontal": "center",
          "vertical": "middle",
        },
        "fill": {
          "textBorder": 0,
        },
        "fontFamily": "Inter, BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "fontSize": 10,
        "fontStyle": "normal",
        "offsetX": 0,
        "offsetY": 0,
        "padding": 0,
      },
      "rect": {
        "opacity": 1,
      },
      "rectBorder": {
        "strokeWidth": 1,
        "visible": false,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "width": 50,
    "x": 50,
    "y": 50,
  },
]
`;

exports[`Rendering bars Multi series bar chart - ordinal can render first spec bars 1`] = `
[
  {
    "color": "red",
    "displayValue": undefined,
    "height": 50,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{bar1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "bar1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "seriesStyle": {
      "displayValue": {
        "alignment": {
          "horizontal": "center",
          "vertical": "middle",
        },
        "fill": {
          "textBorder": 0,
        },
        "fontFamily": "Inter, BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "fontSize": 10,
        "fontStyle": "normal",
        "offsetX": 0,
        "offsetY": 0,
        "padding": 0,
      },
      "rect": {
        "opacity": 1,
      },
      "rectBorder": {
        "strokeWidth": 1,
        "visible": false,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "width": 25,
    "x": 0,
    "y": 50,
  },
  {
    "color": "red",
    "displayValue": undefined,
    "height": 25,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{bar1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "bar1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "seriesStyle": {
      "displayValue": {
        "alignment": {
          "horizontal": "center",
          "vertical": "middle",
        },
        "fill": {
          "textBorder": 0,
        },
        "fontFamily": "Inter, BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "fontSize": 10,
        "fontStyle": "normal",
        "offsetX": 0,
        "offsetY": 0,
        "padding": 0,
      },
      "rect": {
        "opacity": 1,
      },
      "rectBorder": {
        "strokeWidth": 1,
        "visible": false,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "width": 25,
    "x": 50,
    "y": 75,
  },
]
`;

exports[`Rendering bars Multi series bar chart - ordinal can render second spec bars 1`] = `
[
  {
    "color": "blue",
    "displayValue": undefined,
    "height": 100,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{bar2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "bar2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "seriesStyle": {
      "displayValue": {
        "alignment": {
          "horizontal": "center",
          "vertical": "middle",
        },
        "fill": {
          "textBorder": 0,
        },
        "fontFamily": "Inter, BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "fontSize": 10,
        "fontStyle": "normal",
        "offsetX": 0,
        "offsetY": 0,
        "padding": 0,
      },
      "rect": {
        "opacity": 1,
      },
      "rectBorder": {
        "strokeWidth": 1,
        "visible": false,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        20,
      ],
      "mark": null,
      "x": 0,
      "y": 20,
    },
    "width": 25,
    "x": 25,
    "y": 0,
  },
  {
    "color": "blue",
    "displayValue": undefined,
    "height": 50,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{bar2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "bar2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "seriesStyle": {
      "displayValue": {
        "alignment": {
          "horizontal": "center",
          "vertical": "middle",
        },
        "fill": {
          "textBorder": 0,
        },
        "fontFamily": "Inter, BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "fontSize": 10,
        "fontStyle": "normal",
        "offsetX": 0,
        "offsetY": 0,
        "padding": 0,
      },
      "rect": {
        "opacity": 1,
      },
      "rectBorder": {
        "strokeWidth": 1,
        "visible": false,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        10,
      ],
      "mark": null,
      "x": 1,
      "y": 10,
    },
    "width": 25,
    "x": 75,
    "y": 50,
  },
]
`;
